Fixing : remove Address bug/delete account/new address , Adding: password limits/phone number limits, remove userprofile , taskerprofile tests : wait for the refactor inA